syntax = "proto3";

package api;

message EmptyMessage {}

// ACCOUNTS

message Account {
    int64 id = 1;
    string name = 2;
}

message CreateAccountMessage {
    string name = 1;
}

message SingleAccount {
    Account item = 1;
}

// SKUs

message Sku {
    int64 accountID = 2;
    string sku = 3;
    string name = 4;
    string description = 5;
    string barcode = 6;
}

message CreateSkuMessage {
    int64 accountID = 1;
    string sku = 2;
    string name = 3;
    string description = 4;
    string barcode = 5;
}

message SingleSku {
    Sku item = 1;
}

message FindSkuMessage {
    string sku = 1;
}

// Warehouse

message CreateWarehouseMessage {
    int64 accountID = 1;
    string name = 2;
}

message Warehouse {
    int64 id = 1;
    int64 accountID = 2;
    string name = 3;
}

message SingleWarehouse {
    Warehouse item = 1;
}

message WarehouseList {
    repeated Warehouse items = 1;
}

message ListWarehousesMessage {
    int64 accountID = 1;
}

// Location

message Location {
    string id = 1;
    int64 warehouse_id = 2;
}

message CreateLocationMessage {
    int64 warehouseId = 1;
    string name = 2;
}

message SingleLocation {
    Location item = 1;
}

message LocationList {
    repeated Location items = 1;
}

message ListLocationsMessage {
    int64 warehouseId = 1;
}

// Operations

enum OperationState {
    UNKNOWN_OPERATION_STATE = 0;
    AWAITING = 1;
    READY = 2;
    PROCESSED = 3;
}

message Operation {
    int64 accountID = 1;
    int64 ID = 2;
    string reference = 3;
    OperationState state = 4;
    int64 itemCount = 5;
}

message OperationItem {
    int64 ID = 1;
    int64 operationID = 2;
    string sku = 3;
    int64 quantityRequested = 4;
    int64 quantityProcessed = 5;
    string sourceLocation = 6;
    string targetLocation = 7;
}

message CreateOperationMessage {
    int64 accountID = 1;
    string reference = 2;
    repeated OperationItem items = 3;
}

message SingleOperation {
    Operation item = 1;
}

service Inventory {
    rpc CreateAccount(CreateAccountMessage) returns (SingleAccount) {}
    rpc CreateSku(CreateSkuMessage) returns (SingleSku) {}
    rpc UpdateSku(CreateSkuMessage) returns (SingleSku) {}
    rpc FindSku(FindSkuMessage) returns (SingleSku) {}
    
    rpc CreateWarehouse(CreateWarehouseMessage) returns (SingleWarehouse) {}
    rpc ListWarehouses(ListWarehousesMessage) returns (WarehouseList) {}

    rpc CreateLocation(CreateLocationMessage) returns (SingleLocation) {}
    rpc ListLocations(ListLocationsMessage) returns (LocationList) {}

    rpc SearchInventory(SearchMessage) returns (SearchResult) {}

    rpc CreateOperation(CreateOperationMessage) returns (SingleOperation) {}
    rpc ListOperations(ListOperationsMessage) returns (OperationList) {}
    rpc ListOperationItems(SingleOperationMessage) returns (OperationItemList) {}
    rpc ListLocationsForOperation(SingleOperationMessage) returns (SingleOperation) {}
}

message OperationItemList {
    repeated OperationItem items = 1;
}

message SingleOperationMessage {
    int64 operationID = 1;
}

message ListOperationsMessage {
    int64 accountID = 1;
}

message OperationList {
    repeated Operation items = 1;
}

message SingleOperationItem {
    OperationItem item = 1;
}

message SearchMessage {
    int64 accountId = 1;
    string sku = 2;
}

message InventoryItem {
    Sku sku = 2;
    Location location = 3;
    Warehouse warehouse = 4;
    int64 quantity = 5;
}

message SearchResult {
    repeated InventoryItem items = 1;
}